--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/0_Barycenter.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/0_Barycenter.cfg
@@ -14,11 +14,11 @@
 		//Secondary mass: 0.9212 Msol
 		//Mass Ratio:       1.1710812
 		//Ratio Reciprocal: 0.8539118
-		//Semimajor Axis: 0.106 kAU
+		//Semimajor Axis: 0.159 kAU = 2375966177m
 		//R = a * m / (M + m)
 		//R = Barycenter to Primary; M & m are the masses; a = sma.
-		//Barycenter to Primary: 0.0487694117 kAU
-		//Barycenter to Secondary: 0.0571129411 kAU
+		//Barycenter to Primary: 0.0731541176 kAU = 1094370020
+		//Barycenter to Secondary: 0.0856694116 kAU = 1281596157
 		
 		@Template
         {
@@ -28,8 +28,8 @@
         @Properties
         {
 			selectable = True
-			displayName = System Barycenter
-			description = The center of mass of the Suns, Phosphol and Vespol, and effectively the center of the entire planetary system.
+			displayName = Ilio System Barycenter
+			description = The center of mass of the Suns, Ilio Phosphol and Ilio Vespol, and effectively the center of the entire planetary system.
 			mass = 3.977e28
 			//2 Msol
 			radius = 80000000
