--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/A_Phosphol.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/A_Phosphol.cfg
@@ -10,9 +10,9 @@
 		}
 		Properties
 		{
-			displayName = Phosphol^N
-			rotationPeriod = 115951.33 //seconds
-			sphereOfInfluence = 854397438
+			displayName = Ilio Phosphol^N
+			rotationPeriod = 446648.74427543284 //seconds
+			sphereOfInfluence = 1281596157
 			
 			//1/10th scale Sun.
 			radius = 69570000
@@ -25,7 +25,7 @@
 			//Temperature = 5800K
 			
 			
-			description = Phosphol, the Morning Sun, is the larger, hotter, and more luminous of the two Suns in the daytime sky.\n -Luna
+			description = Ilio Phosphol, the Morning Sun, is the larger, hotter, and more luminous of the two Suns in the daytime sky.\n -Luna
 		}
 		ScaledVersion
         {
@@ -101,9 +101,9 @@
 		{
 			referenceBody = 2W2PJ/AB_Barycenter
 			//barycentric distance is 0.0487694117 kAU
-			semiMajorAxis = 729580015
+			semiMajorAxis = 1094370020
 			
-			period = 243530.1 //seconds
+			period = 446648.74427543284 //seconds
 			
 			inclination = 6.8
 			eccentricity = 0.002
