--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/B_Vespol.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/B_Vespol.cfg
@@ -10,9 +10,9 @@
 		}
 		Properties
 		{
-			displayName = Vespol^N
-			rotationPeriod = 115951.33 //seconds
-			sphereOfInfluence = 729580015
+			displayName = Ilio Vespol^N
+			rotationPeriod = 446648.74427543284 //seconds
+			sphereOfInfluence = 1094370020
 			
 			
 			//1/10th scale Sun.
@@ -26,7 +26,7 @@
 			//Temperature = 5260K
 			//color = 1,0.978,0.932,1
 			
-			description = Vespol, the Dusk Sun, is the dimmer, less massive, and faster moving of the two Suns in the daytime sky.\n -Luna
+			description = Ilio Vespol, the Dusk Sun, is the dimmer, less massive, and faster moving of the two Suns in the daytime sky.\n -Luna
 		}
 		ScaledVersion
         {
@@ -103,9 +103,9 @@
 		{
 			referenceBody = 2W2PJ/AB_Barycenter
 			//barycentric distance is 0.0571129411 kAU 
-			semiMajorAxis = 854397438
+			semiMajorAxis = 1281596157
 			
-			period = 243530.1 //seconds
+			period = 446648.74427543284 //seconds
 			
 			inclination = 6.8
 			eccentricity = 0.002
