--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -23,7 +23,8 @@
 			//temperature = 2637 Kelvins
 			
 			//i have a fun idea for the description but barely enough creative brain goo to write it down. consider this a WIP.
-			description = Pyri wasn't discovered until recently, despite being the star around which our home orbits. It had briefly been identified as the long since hypothesized Central Fire suspected to be the center of the entire universe. A Counterweight planet must surely exist on the other side for that to be the case or the cosmos would be lopsided, so in order to evaluate whether the Central Fire really is the center, we must voyage into space to peer behind the Central Fire and detect this counterplanet. \n -Luna
+			//description = Pyri wasn't discovered until recently, despite being the star around which our home orbits. It had briefly been identified as the long since hypothesized Central Fire suspected to be the center of the entire universe. A Counterweight planet must surely exist on the other side for that to be the case or the cosmos would be lopsided, so in order to evaluate whether the Central Fire really is the center, we must voyage into space to peer behind the Central Fire and detect this counterplanet. \n -Luna
+			description = Pyri is a red dwarf star.
 		}
 		Orbit
 		{
