--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/A_Phosphol.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/A_Phosphol.cfg
@@ -52,22 +52,78 @@
 					key = 0.5 22 0 0
 					key = 0.65 0 0 0
                 }
-				//placeholder light curves
+				
+				//light curve uses a piecewise exponential function.
+				//the lighting gets dimmer with r^-0.4 until sqrt2 au, when it gets dimmer with r^-0.25
+				//lighting is calculated as if it were a single star of 2 Lsol, then intensities are multiplied by 0.75.
+				
 				IntensityCurve
 				{
 					key = 0 0.75 0 0
-					key = 1 0.75 0 0
-				}
-				ScaledIntensityCurve
-				{
-					key = 0 0.75 0 0
-					key = 1 0.75 0 0
+					key = 	84701475	6.824653407	0	0
+					key = 	254104425	4.39776581	0	0
+					key = 	1281596157	2.30216534	0	0
+					key = 	6731904182	1.18571911	0	0
+					key = 	9464010094	1.034682043	0	0
+					key = 	10558049242	0.9903837741	0	0
+					key = 	14959787070	0.8615228982	0	0
+					key = 	17432939068	0.8103800572	0	0
+					key = 	18357902703	0.7937939129	0	0
+					key = 	21156280472	0.75	0	0
+					key = 	22843594856	0.7357495075	0	0
+					key = 	29933636340	0.6876718121	0	0
+					key = 	95204084913	0.5149406734	0	0
+					key = 	188792512823	0.4339352199	0	0
+					key = 	260947754602	0.4002051761	0	0
+					key = 	373774019891	0.3658211533	0	0
+					key = 	7479893535000	0.1729606219	0	0
+					key =	10000000000000	0	0	0
 				}
 				IVAIntensityCurve
 				{
 					key = 0 0.75 0 0
-					key = 1 0.75 0 0
+					key = 	84701475	6.824653407	0	0
+					key = 	254104425	4.39776581	0	0
+					key = 	1281596157	2.30216534	0	0
+					key = 	6731904182	1.18571911	0	0
+					key = 	9464010094	1.034682043	0	0
+					key = 	10558049242	0.9903837741	0	0
+					key = 	14959787070	0.8615228982	0	0
+					key = 	17432939068	0.8103800572	0	0
+					key = 	18357902703	0.7937939129	0	0
+					key = 	21156280472	0.75	0	0
+					key = 	22843594856	0.7357495075	0	0
+					key = 	29933636340	0.6876718121	0	0
+					key = 	95204084913	0.5149406734	0	0
+					key = 	188792512823	0.4339352199	0	0
+					key = 	260947754602	0.4002051761	0	0
+					key = 	373774019891	0.3658211533	0	0
+					key = 	7479893535000	0.1729606219	0	0
+					key =	10000000000000	0	0	0
 				}
+				ScaledIntensityCurve
+				{
+					key = 0 0.75 0 0
+					key = 	14116.9125	6.824653407	0	0
+					key = 	42350.7375	4.39776581	0	0
+					key = 	213599.3596	2.30216534	0	0
+					key = 	1121984.03	1.18571911	0	0
+					key = 	1577335.016	1.034682043	0	0
+					key = 	1759674.874	0.9903837741	0	0
+					key = 	2493297.845	0.8615228982	0	0
+					key = 	2905489.845	0.8103800572	0	0
+					key = 	3059650.45	0.7937939129	0	0
+					key = 	3526046.745	0.75	0	0
+					key = 	3807265.809	0.7357495075	0	0
+					key = 	4988939.39	0.6876718121	0	0
+					key = 	15867347.49	0.5149406734	0	0
+					key = 	31465418.8	0.4339352199	0	0
+					key = 	43491292.43	0.4002051761	0	0
+					key = 	62295669.98	0.3658211533	0	0
+					key = 	1246648923	0.1729606219	0	0
+					key =	1.66666667e9	0	0	0
+				}
+				
 			}
 			Material
 			{
