--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -21,6 +21,8 @@
 			@mass *= 0.08
 			//luminosity = 0.00049 Lsol
 			//temperature = 2637 Kelvins
+			//color = 1.0000,0.6275,0.2784,1
+			//LumaCorrectedColor = 1.172,0.955,0.757,1
 			
 			//i have a fun idea for the description but barely enough creative brain goo to write it down. consider this a WIP.
 			//description = Pyri wasn't discovered until recently, despite being the star around which our home orbits. It had briefly been identified as the long since hypothesized Central Fire suspected to be the center of the entire universe. A Counterweight planet must surely exist on the other side for that to be the case or the cosmos would be lopsided, so in order to evaluate whether the Central Fire really is the center, we must voyage into space to peer behind the Central Fire and detect this counterplanet. \n -Luna
@@ -77,10 +79,10 @@
 			}
 			Light
 			{
-				sunLensFlareColor = 1.0000,0.6275,0.2784,1
-				IVASunColor = 1.0000,0.6275,0.2784,1
-				scaledSunlightColor = 1.0000,0.6275,0.2784,1
-				sunlightColor = 1.0000,0.6275,0.2784,1
+				sunLensFlareColor = 1.172,0.955,0.757
+				IVASunColor = 1.172,0.955,0.757
+				scaledSunlightColor = 1.172,0.955,0.757
+				sunlightColor = 1.172,0.955,0.757
 				scaledSunlightIntensity = 0.9
 				sunlightIntensity = 0.9
 				sunAU = 7450947
@@ -98,137 +100,132 @@
                     key = 0.2 6 0 0
                     key = 0.3 10 0 0
                 }
-				//placeholder light curves nicked from Gememma.
+				
+				//light curve uses a piecewise exponential function.
+				//the lighting gets dimmer with r^-0.4 until sqrt(Lsol) au, when it gets dimmer with r^-0.25
+				//lighting is calculated as if it were a single star of 2 Lsol, then intensities are multiplied by 0.25.
+				
 				IntensityCurve
 				{
 					//base
 					key = 0 1 0 0
-					
-					//Gememma Surface = 0.0197908115 gmau
-					key = 13800000 7.1083401 0 0
-					//Ammenon = 0.211316186 gmau
-					key = 147349358 2.17537242 0 0
-					
-					//0.5 gmau
-					key = 348646643 1.41421356 0 0
-					
-					//Lowel = 0.965433673 gmau
-					key = 673190418 1.01774453 0 0
-					
-					//Earth Insolation Analogue = 1 gmau
-					key = 697293286 1 0 0
-					
-					//2 gmau
-					key = 1394586572 0.707106781 0 0
-					
-					//5 gmau
-					key = 3486466430 0.447213595 0 0
-					
-					//Former Location of Mandrake/Rutherford System
-					key = 5821662910 0.346086146 0 0
-					
-					//10 gmau
-					key = 6972932860 0.316227766 0 0
-					
-					//Mandrake/Rutherford System
-					key = 11643325820 0.244719861 0 0
-					
-					//100 gmau
-					key = 69729328600 0.1 0 0
-					
-					//Kaywell Star System
-					key = 4.92E+11 0.0376465507 0 0
-					
-					//10000 gmau
-					key = 6972932860000 0 0 0
+					key = 	7450947.005		4.562014083	0	0
+					key = 	22352841.02		2.939734571	0	0
+					key = 	74509470.05		1.816170519	0	0
+					key = 	186273675.1		1.258869229	0	0
+					key = 	298037880.2		1.043116044	0	0
+					key = 	329115315.5		1.002540611	0	0
+					key = 	331209685.7		1	0	0
+					key = 	1711399641		0.6632662485	0	0
+					key = 	2218536422		0.6215972957	0	0
+					key = 	2725673204		0.5904149027	0	0
+					key = 	5087823583		0.5051178851	0	0
+					key = 	7449973961		0.45918434	0	0
+					key = 	7883807786		0.4527325816	0	0
+					key = 	22575814667		0.3480285718	0	0
+					key = 	26269386095		0.3350913956	0	0
+					key = 	95204084913		0.242863283	0	0
+					key = 	65270507665		0.2668987314	0	0
+					key = 	72360490058		0.2601060071	0	0
+					key = 	77771159309		0.2554589448	0	0
+					key = 	85740036836		0.249304341	0	0
+					key = 	93588427910		0.2439047281	0	0
+					key = 	104668132990	0.2371767631	0	0
+					key = 	112637010518	0.2328656756	0	0
+					key = 	118047679769	0.2301502194	0	0
+					key = 	125137662162	0.226818643	0	0
+					key = 	165743737008	0.2114299346	0	0
+					key = 	188792512823	0.2046583957	0	0
+					key = 	260947821921	0.1887501642	0	0
+					key = 	278569964897	0.1856915686	0	0
+					key = 	283996597737	0.1847980877	0	0
+					key = 	356151906835	0.1746292298	0	0
+					key = 	373774049810	0.1725335152	0	0
+					key = 	468978134724	0.1630187687	0	0
+					key = 	7479893535000	0.08157402714	0	0
+					key = 	9999999996606	0	0	0
 				}
 				
 				IVAIntensityCurve
 				{
 					//base
 					key = 0 1 0 0
-					
-					//Gememma Surface = 0.0197908115 gmau
-					key = 13800000 7.1083401 0 0
-					//Ammenon = 0.211316186 gmau
-					key = 147349358 2.17537242 0 0
-					
-					//0.5 gmau
-					key = 348646643 1.41421356 0 0
-					
-					//Lowel = 0.965433673 gmau
-					key = 673190418 1.01774453 0 0
-					
-					//Earth Insolation Analogue = 1 gmau
-					key = 697293286 1 0 0
-					
-					//2 gmau
-					key = 1394586572 0.707106781 0 0
-					
-					//5 gmau
-					key = 3486466430 0.447213595 0 0
-					
-					//Former Location of Mandrake/Rutherford System
-					key = 5821662910 0.346086146 0 0
-					
-					//10 gmau
-					key = 6972932860 0.316227766 0 0
-					
-					//Mandrake/Rutherford System
-					key = 11643325820 0.244719861 0 0
-					
-					//100 gmau
-					key = 69729328600 0.1 0 0
-					
-					//Kaywell Star System
-					key = 4.92E+11 0.0376465507 0 0
-					
-					//10000 gmau
-					key = 6972932860000 0 0 0
+					key = 	7450947.005	4.562014083	0	0
+					key = 	22352841.02	2.939734571	0	0
+					key = 	74509470.05	1.816170519	0	0
+					key = 	186273675.1	1.258869229	0	0
+					key = 	298037880.2	1.043116044	0	0
+					key = 	329115315.5	1.002540611	0	0
+					key = 	331209685.7	1	0	0
+					key = 	1711399641	0.6632662485	0	0
+					key = 	2218536422	0.6215972957	0	0
+					key = 	2725673204	0.5904149027	0	0
+					key = 	5087823583	0.5051178851	0	0
+					key = 	7449973961	0.45918434	0	0
+					key = 	7883807786	0.4527325816	0	0
+					key = 	22575814667	0.3480285718	0	0
+					key = 	26269386095	0.3350913956	0	0
+					key = 	95204084913	0.242863283	0	0
+					key = 	65270507665	0.2668987314	0	0
+					key = 	72360490058	0.2601060071	0	0
+					key = 	77771159309	0.2554589448	0	0
+					key = 	85740036836	0.249304341	0	0
+					key = 	93588427910	0.2439047281	0	0
+					key = 	104668132990	0.2371767631	0	0
+					key = 	112637010518	0.2328656756	0	0
+					key = 	118047679769	0.2301502194	0	0
+					key = 	125137662162	0.226818643	0	0
+					key = 	165743737008	0.2114299346	0	0
+					key = 	188792512823	0.2046583957	0	0
+					key = 	260947821921	0.1887501642	0	0
+					key = 	278569964897	0.1856915686	0	0
+					key = 	283996597737	0.1847980877	0	0
+					key = 	356151906835	0.1746292298	0	0
+					key = 	373774049810	0.1725335152	0	0
+					key = 	468978134724	0.1630187687	0	0
+					key = 	7479893535000	0.08157402714	0	0
+					key = 	9999999996606	0	0	0
 				}
 				
 				ScaledIntensityCurve
 				{
 					//base
 					key = 0 1 0 0
-					
-					//Gememma Surface = 0.0197908115 gmau
-					key = 2300 7.1083401 0 0
-					//Ammenon = 0.211316186 gmau
-					key = 24558.2263 2.17537242 0 0
-					
-					//0.5 gmau
-					key = 58107.7738 1.41421356 0 0
-					
-					//Lowel = 0.965433673 gmau
-					key = 112198.403 1.01774453 0 0
-					
-					//Earth Insolation Analogue = 1 gmau
-					key = 116215.548 1 0 0
-					
-					//2 gmau
-					key = 232431.095 0.707106781 0 0
-					
-					//5 gmau
-					key = 581077.738 0.447213595 0 0
-					
-					//Former Location of Mandrake/Rutherford System
-					key = 970277.152 0.346086146 0 0
-					
-					//10 gmau
-					key = 1162155.48 0.316227766 0 0
-					
-					//Mandrake/Rutherford System
-					key = 1940554.3 0.244719861 0 0
-					
-					//100 gmau
-					key = 11621554.8 0.1 0 0
-					
-					//Kaywell Star System
-					key = 82000000 0.0376465507 0 0
-					
-					//10000 gmau
-					key = 1.16215548e9 0 0 0
+					key = 	1241.824501	4.562014083	0	0
+					key = 	3725.473503	2.939734571	0	0
+					key = 	12418.24501	1.816170519	0	0
+					key = 	31045.61252	1.258869229	0	0
+					key = 	49672.98004	1.043116044	0	0
+					key = 	54852.55259	1.002540611	0	0
+					key = 	55201.61429	1	0	0
+					key = 	285233.2735	0.6632662485	0	0
+					key = 	369756.0704	0.6215972957	0	0
+					key = 	454278.8674	0.5904149027	0	0
+					key = 	847970.5971	0.5051178851	0	0
+					key = 	1241662.327	0.45918434	0	0
+					key = 	1313967.964	0.4527325816	0	0
+					key = 	3762635.778	0.3480285718	0	0
+					key = 	4378231.016	0.3350913956	0	0
+					key = 	15867347.49	0.242863283	0	0
+					key = 	10878417.94	0.2668987314	0	0
+					key = 	12060081.68	0.2601060071	0	0
+					key = 	12961859.88	0.2554589448	0	0
+					key = 	14290006.14	0.249304341	0	0
+					key = 	15598071.32	0.2439047281	0	0
+					key = 	17444688.83	0.2371767631	0	0
+					key = 	18772835.09	0.2328656756	0	0
+					key = 	19674613.29	0.2301502194	0	0
+					key = 	20856277.03	0.226818643	0	0
+					key = 	27623956.17	0.2114299346	0	0
+					key = 	31465418.8	0.2046583957	0	0
+					key = 	43491303.65	0.1887501642	0	0
+					key = 	46428327.48	0.1856915686	0	0
+					key = 	47332766.29	0.1847980877	0	0
+					key = 	59358651.14	0.1746292298	0	0
+					key = 	62295674.97	0.1725335152	0	0
+					key = 	78163022.45	0.1630187687	0	0
+					key = 	1246648923	0.08157402714	0	0
+					key = 	1666666666	0	0	0
 				}
 			}
 		}
