--- a/GameData/2W2PJ/KopernicusFiles/0_Suns/B_Vespol.cfg
+++ b/GameData/2W2PJ/KopernicusFiles/0_Suns/B_Vespol.cfg
@@ -25,6 +25,7 @@
 			//Luminosity = 0.4981 Lsol
 			//Temperature = 5260K
 			//color = 1,0.978,0.932,1
+			//LumaCorrectedColor = 1.017, 0.997, 0.957
 			
 			description = Ilio Vespol, the Dusk Sun, is the dimmer, less massive, and faster moving of the two Suns in the daytime sky.\n -Luna
 		}
@@ -34,10 +35,10 @@
 			{
 				ambientLightColor = 0.02, 0.02, 0.02, 1.0
 				sunAU = 59767587
-				sunlightColor = 1,0.978,0.932,1
-				scaledSunlightColor = 1,0.978,0.932,1
-				IVASunColor = 1,0.978,0.932,1
-				sunLensFlareColor = 1,0.978,0.932,1
+				sunlightColor = 1.017,0.997,0.957,1
+				scaledSunlightColor = 1.017,0.997,0.957,1
+				IVASunColor = 1.017,0.997,0.957,1
+				sunLensFlareColor = 1.017,0.997,0.957,1
 				sunFlare = 2W2PJ/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
 				
 				brightnessCurve
@@ -53,22 +54,78 @@
 					key = 0.5 22 0 0
 					key = 0.65 0 0 0
                 }
-				//placeholder light curves
+				
+				//light curve uses a piecewise exponential function.
+				//the lighting gets dimmer with r^-0.4 until sqrt2 au, when it gets dimmer with r^-0.25
+				//lighting is calculated as if it were a single star of 2 Lsol, then intensities are multiplied by 0.25.
+				
 				IntensityCurve
 				{
 					key = 0 0.25 0 0
-					key = 1 0.25 0 0
-				}
-				ScaledIntensityCurve
-				{
-					key = 0 0.25 0 0
-					key = 1 0.25 0 0
+					key = 	84701475	2.274884469	0	0
+					key = 	254104425	1.465921937	0	0
+					key = 	1281596157	0.7673884466	0	0
+					key = 	6731904182	0.3952397034	0	0
+					key = 	9464010094	0.3448940142	0	0
+					key = 	10558049242	0.3301279247	0	0
+					key = 	14959787070	0.2871742994	0	0
+					key = 	17432939068	0.2701266857	0	0
+					key = 	18357902703	0.264597971	0	0
+					key = 	21156280472	0.25	0	0
+					key = 	22843594856	0.2452498358	0	0
+					key = 	29933636340	0.2292239374	0	0
+					key = 	95204084913	0.1716468911	0	0
+					key = 	188792512823	0.1446450733	0	0
+					key = 	260947754602	0.1334017254	0	0
+					key = 	373774019891	0.1219403844	0	0
+					key = 	7479893535000	0.05765354065	0	0
+					key =	10000000000000	0	0	0
 				}
 				IVAIntensityCurve
 				{
 					key = 0 0.25 0 0
-					key = 1 0.25 0 0
+					key = 	84701475	2.274884469	0	0
+					key = 	254104425	1.465921937	0	0
+					key = 	1281596157	0.7673884466	0	0
+					key = 	6731904182	0.3952397034	0	0
+					key = 	9464010094	0.3448940142	0	0
+					key = 	10558049242	0.3301279247	0	0
+					key = 	14959787070	0.2871742994	0	0
+					key = 	17432939068	0.2701266857	0	0
+					key = 	18357902703	0.264597971	0	0
+					key = 	21156280472	0.25	0	0
+					key = 	22843594856	0.2452498358	0	0
+					key = 	29933636340	0.2292239374	0	0
+					key = 	95204084913	0.1716468911	0	0
+					key = 	188792512823	0.1446450733	0	0
+					key = 	260947754602	0.1334017254	0	0
+					key = 	373774019891	0.1219403844	0	0
+					key = 	7479893535000	0.05765354065	0	0
+					key =	10000000000000	0	0	0
 				}
+				ScaledIntensityCurve
+				{
+					key = 0 0.25 0 0
+					key = 	14116.9125	2.274884469	0	0
+					key = 	42350.7375	1.465921937	0	0
+					key = 	213599.3596	0.7673884466	0	0
+					key = 	1121984.03	0.3952397034	0	0
+					key = 	1577335.016	0.3448940142	0	0
+					key = 	1759674.874	0.3301279247	0	0
+					key = 	2493297.845	0.2871742994	0	0
+					key = 	2905489.845	0.2701266857	0	0
+					key = 	3059650.45	0.264597971	0	0
+					key = 	3526046.745	0.25	0	0
+					key = 	3807265.809	0.2452498358	0	0
+					key = 	4988939.39	0.2292239374	0	0
+					key = 	15867347.49	0.1716468911	0	0
+					key = 	31465418.8	0.1446450733	0	0
+					key = 	43491292.43	0.1334017254	0	0
+					key = 	62295669.98	0.1219403844	0	0
+					key = 	1246648923	0.05765354065	0	0
+					key =	1.66666667e9	0	0	0
+				}
+				
 			}
 			Material
 			{
