fix radiationFactor for Ilio and Pyri

--- a/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
@@ -39,6 +39,8 @@
 				sunLensFlareColor = 1,1,1,1
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
 				
+				radiationFactor = 0.7514467487 //At sqrt2 kAU
+				
 				brightnessCurve
                 {
                     key = 0.0000000005 0.03 0 0
