--- a/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -88,6 +88,9 @@
 				sunAU = 7450947
 				ambientLightColor = 0.05,0.05,0.05,1
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
+				
+				radiationFactor = 0.000245 //at Sqrt2 AU
+				
 				!brightnessCurve {}
 				brightnessCurve
                 {
