--- a/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
@@ -41,6 +41,8 @@
 				sunLensFlareColor = 1.017,0.997,0.957,1
 				sunFlare = PJ2/KopernicusFiles/0_Suns/PluginData/white_sun_flare.unity3d:white_sun_flare
 				
+				radiationFactor = 0.2485532513 //At Sqrt2 kAU
+				
 				brightnessCurve
                 {
                     key = 0.0000000005 0.03 0 0
