Fix an asteroid issue
if you saw settings no you didnt

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Scatterer/atmo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/Scatterer/atmo.cfg
@@ -2,7 +2,7 @@ Scatterer_atmosphere
 {
 	Atmo
 	{
-		name = Cbx
+		name = PJ2Settings
 		atmosphereStartRadiusScale = 1
 		HR = 0.374399996
 		HM = 0.0561600029
