you didnt see this

--- a/GameData/PJ2/Scatterer/PlanetsList.cfg
+++ b/GameData/PJ2/Scatterer/PlanetsList.cfg
@@ -34,8 +34,8 @@
 		}
 		Item
 		{
-			celestialBodyName = Cbx
-			transformName = Cbx
+			celestialBodyName = PJ2Settings
+			transformName = PJ2Settings
 			loadDistance = 1000000
 			unloadDistance = 2000000
 			hasOcean = False
