--- a/GameData/PJ2/SETTINGS.cfg
+++ b/GameData/PJ2/SETTINGS.cfg
@@ -11,3 +11,5 @@ PJ2_Settings
 	//SabineLogarithmic1.0 and 1.5 differ by which exponent was used in the light curve generator spreadsheet.
 	//the higher exponent represents a greater difference in brightness with distance.
 }
+
+//test
