Scaledspace changes for a few things
* Redo Beddul's scaledspace fade altitudes so that the PQS should be revealed only at the cloud layer.
* Disable Beddul's patch that makes Beddul use a regular scaledspace texture when EVE is installed, at least for now.
* Replace Rangon's normal map.
* Skle cachefile.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
@@ -56,8 +56,9 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 65000
-			fadeEnd = 70000
+			sphericalModel = True
+			fadeStart = 10500
+			fadeEnd = 11000
 			Material
 			{
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/PluginData/BeddulScaled.dds
@@ -138,9 +139,9 @@
 		}
 		PQS
 		{
-			fadeStart = 70000
-			fadeEnd = 140000
-			deactivateAltitude = 180000
+			fadeStart = 11500
+			fadeEnd = 14000
+			deactivateAltitude = 30000
 			maxLevel = 7
 			Mods
 			{
