Changes to Alkin and Klina systems
from Mh:
* Atmospheres for Drae, Kilna, and Alkin.
* Orbit line colors for Marith and Radlun.
* Updated PQSMods, scaledspace textures, and fades for Drae.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -74,11 +74,129 @@
 			eccentricity = 0
 			inclination = 2
 		}
+		Atmosphere				
+		{				
+			enabled =	True			
+			oxygen =	False			
+			altitude =	50000			
+			adiabaticIndex =	1.29			
+			atmosphereMolarMass =	0.04057			
+			temperatureSeaLevel =	331			
+			staticPressureASL =	20.265			
+			temperatureCurve				
+			{				
+				key =	0	302	0.00000E+00	-5.94001E-04
+				key =	3367	300	-5.94001E-04	-1.23839E-03
+				key =	6597	296	-1.23839E-03	-1.28866E-03
+				key =	9701	292	-1.28866E-03	-2.01072E-03
+				key =	12685	286	-2.01072E-03	-2.78455E-03
+				key =	15558	278	-2.78455E-03	-3.24910E-03
+				key =	18328	269	-3.24910E-03	-3.73832E-03
+				key =	21003	259	-3.73832E-03	-3.47893E-03
+				key =	23590	250	-3.47893E-03	-3.58995E-03
+				key =	26097	241	-3.58995E-03	-3.28542E-03
+				key =	28532	233	-3.28542E-03	-3.37553E-03
+				key =	30902	225	-3.37553E-03	-3.02768E-03
+				key =	33214	218	-3.02768E-03	-2.65252E-03
+				key =	35476	212	-2.65252E-03	-2.70392E-03
+				key =	37695	206	-2.70392E-03	-2.28938E-03
+				key =	39879	201	-2.28938E-03	-1.86133E-03
+				key =	42028	197	-1.86133E-03	-1.88857E-03
+				key =	44146	193	-1.88857E-03	-1.91663E-03
+				key =	46233	189	-1.91663E-03	-1.45631E-03
+				key =	48293	186	-1.45631E-03	-1.17165E-03
+				key =	50000	184	-1.17165E-03	0.00000E+00
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	1.000	0.00000E+00	-1.17315E-04
+				key =	3367	0.605	-1.17315E-04	-1.06502E-04
+				key =	6597	0.261	-1.06502E-04	-8.79510E-05
+				key =	9701	-0.012	-8.79510E-05	-6.30027E-05
+				key =	12685	-0.200	-6.30027E-05	-3.20223E-05
+				key =	15558	-0.292	-3.20223E-05	-1.44404E-06
+				key =	18328	-0.296	-1.44404E-06	8.22430E-06
+				key =	21003	-0.274	8.22430E-06	1.39157E-05
+				key =	23590	-0.238	1.39157E-05	1.87475E-05
+				key =	26097	-0.191	1.87475E-05	2.17659E-05
+				key =	28532	-0.138	2.17659E-05	2.40506E-05
+				key =	30902	-0.081	2.40506E-05	2.50865E-05
+				key =	33214	-0.023	2.50865E-05	2.47569E-05
+				key =	35476	0.033	2.47569E-05	2.43353E-05
+				key =	37695	0.087	2.43353E-05	2.24359E-05
+				key =	39879	0.136	2.24359E-05	2.00093E-05
+				key =	42028	0.179	2.00093E-05	1.65250E-05
+				key =	44146	0.214	1.65250E-05	1.24581E-05
+				key =	46233	0.240	1.24581E-05	7.28155E-06
+				key =	48293	0.255	7.28155E-06	2.34329E-06
+				key =	50000	0.259	2.34329E-06	0.00000E+00
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	12.93	0	0
+				key =	38	0	-0.6555	-0.6555
+				key =	90	-48.07	-1.0647	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	68	0	0
+				key =	38	57.82	-0.5158	-0.5158
+				key =	90	20	-0.8378	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	-0.11	0	-0.006
+				key =	72	-0.36	0	0
+				key =	162	0	0.0063	0.0063
+				key =	252	0.36	0	0
+				key =	342	0	-0.0063	-0.0063
+				key =	360	-0.11	-0.006	0
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	0.85	0	-1.7
+				key =	1	-0.85	-1.7	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	2.02650E+01	0.00000E+00	-3.39415E-03
+				key =	3367	1.13958E+01	-1.99219E-03	-1.99219E-03
+				key =	6597	6.40836E+00	-1.16829E-03	-1.16829E-03
+				key =	9701	3.60368E+00	-6.84424E-04	-6.84424E-04
+				key =	12685	2.02650E+00	-4.00486E-04	-4.00486E-04
+				key =	15558	1.13958E+00	-2.34028E-04	-2.34028E-04
+				key =	18328	6.40836E-01	-1.36550E-04	-1.36550E-04
+				key =	21003	3.60368E-01	-7.95394E-05	-7.95394E-05
+				key =	23590	2.02650E-01	-4.62453E-05	-4.62453E-05
+				key =	26097	1.13958E-01	-2.68331E-05	-2.68331E-05
+				key =	28532	6.40836E-02	-1.55353E-05	-1.55353E-05
+				key =	30902	3.60368E-02	-8.97305E-06	-8.97305E-06
+				key =	33214	2.02650E-02	-5.16976E-06	-5.16976E-06
+				key =	35476	1.13958E-02	-2.97063E-06	-2.97063E-06
+				key =	37695	6.40836E-03	-1.70046E-06	-1.70046E-06
+				key =	39879	3.60368E-03	-9.72402E-07	-9.72402E-07
+				key =	42028	2.02650E-03	-5.55732E-07	-5.55732E-07
+				key =	44146	1.13958E-03	-3.17376E-07	-3.17376E-07
+				key =	46233	6.40836E-04	-1.81100E-07	-1.81100E-07
+				key =	48293	3.60368E-04	-1.03240E-07	-1.03240E-07
+				key =	50000	0.00000E+00	0.00000E+00	0.00000E+00
+			}
+			AtmosphereFromGround
+			{
+				waveLength = 0.758668065,0.688461483,0.615384698,0
+			}
+		}
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 30000
-			fadeEnd = 35000
+			fadeStart = 40000
+			fadeEnd = 45000
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_Scaled.dds
@@ -104,9 +222,9 @@
 		PQS
 		{
 			materialType = AtmosphericTriplanarZoomRotation
-			fadeStart = 35000
-			fadeEnd = 50000
-			deactivateAltitude = 55000
+			fadeStart = 45000
+			fadeEnd = 60000
+			deactivateAltitude = 65000
 			Material
 			{
 				factor = 10
@@ -158,8 +276,8 @@
 				VertexHeightMap
 				{
 					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Draeheight.png
-					offset = -1050
-					deformity = 7000
+					offset = -1550
+					deformity = 13000
 					scaleDeformityByRadius = False
 					order = 1
 					enabled = True
@@ -167,8 +285,8 @@
 				}
 				VertexSimplexHeight
 				{
-					deformity = 200
-					frequency = 3
+					deformity = 500
+					frequency = 12
 					octaves = 4
 					persistence = 0.6
 					seed = 7815634
@@ -178,7 +296,7 @@
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
-					deformity = 300
+					deformity = 400
 					ridgedAddFrequency = 25
 					ridgedAddLacunarity = 2
 					ridgedAddOctaves = 4
