--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
@@ -74,6 +74,119 @@
 				tiles = 0
 			}
 		}
+		Atmosphere				
+		{				
+			enabled =	True			
+			oxygen =	False			
+			altitude =	319000			
+			adiabaticIndex =	1.41			
+			atmosphereMolarMass =	0.002256			
+			temperatureSeaLevel =	735			
+			staticPressureASL =	10132.5			
+			temperatureCurve				
+			{				
+				key =	0	735	0.00000E+00	-1.59655E-02
+				key =	7892	609	-1.59655E-02	-1.51930E-02
+				key =	14474	509	-1.51930E-02	-1.48389E-02
+				key =	20000	427	-1.48389E-02	-3.15515E-03
+				key =	41869	358	-3.15515E-03	-2.80808E-03
+				key =	60387	306	-2.80808E-03	-2.50203E-03
+				key =	76374	266	-2.50203E-03	-1.83176E-03
+				key =	90568	240	-1.83176E-03	-1.06805E-03
+				key =	103676	226	-1.06805E-03	-3.16331E-04
+				key =	116321	222	-3.16331E-04	-7.95798E-05
+				key =	128887	221	-7.95798E-05	2.36612E-04
+				key =	141566	224	2.36612E-04	5.38793E-04
+				key =	154558	231	5.38793E-04	5.94265E-04
+				key =	168020	239	5.94265E-04	6.43179E-04
+				key =	182013	248	6.43179E-04	5.51991E-04
+				key =	196506	256	5.51991E-04	2.69052E-04
+				key =	211373	260	2.69052E-04	6.64982E-05
+				key =	226411	261	6.64982E-05	-6.63394E-05
+				key =	241485	260	-6.63394E-05	0.00000E+00
+				key =	256575	260	0.00000E+00	0.00000E+00
+				key =	271680	260	0.00000E+00	1.96915E-04
+				key =	286915	263	1.96915E-04	8.26289E-04
+				key =	302648	276	8.26289E-04	1.40656E-03
+				key =	319000	299	1.40656E-03	0.00000E+00
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	0.000	0.00000E+00	0.00000E+00
+				key =	76374	0.000	0.00000E+00	3.52262E-06
+				key =	90568	0.050	3.52262E-06	1.14434E-05
+				key =	103676	0.200	1.14434E-05	1.77936E-05
+				key =	116321	0.425	1.77936E-05	1.79055E-05
+				key =	128887	0.650	1.79055E-05	1.57741E-05
+				key =	141566	0.850	1.57741E-05	1.15456E-05
+				key =	154558	1.000	1.15456E-05	6.08117E-06
+				key =	319000	2.000	6.08117E-06	0.00000E+00
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	1.7	0	0
+				key =	38	0	-0.086	-0.086
+				key =	90	-6.3	-0.1396	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	9	0	0
+				key =	38	7.73	-0.0645	-0.0645
+				key =	90	3	-0.1047	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	-0.34	0	-0.0013
+				key =	12	-0.35	0	0
+				key =	102	0	0.006	0.006
+				key =	192	0.35	0	0
+				key =	282	0	-0.006	-0.006
+				key =	360	-0.34	-0.0013	0
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	0.8	0	-1.6
+				key =	1	-0.8	-1.6	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	1.01325E+04	0.00000E+00	-8.98907E-01
+				key =	7892	4.70309E+03	-5.04236E-01	-5.04236E-01
+				key =	14474	2.18298E+03	-2.79611E-01	-2.79611E-01
+				key =	20000	1.01325E+03	-3.82529E-07	-3.28301E-02
+				key =	41869	4.70309E+02	-1.81889E-02	-1.81889E-02
+				key =	60387	2.18298E+02	-9.88548E-03	-9.88548E-03
+				key =	76374	1.01325E+02	-5.26834E-03	-5.26834E-03
+				key =	90568	4.70309E+01	-2.70538E-03	-2.70538E-03
+				key =	103676	2.18298E+01	-1.33247E-03	-1.33247E-03
+				key =	116321	1.01325E+01	-6.27327E-04	-6.27327E-04
+				key =	128887	4.70309E+00	-2.91180E-04	-2.91180E-04
+				key =	141566	2.18298E+00	-1.33000E-04	-1.33000E-04
+				key =	154558	1.01325E+00	-5.98486E-05	-5.98486E-05
+				key =	168020	4.70309E-01	-2.67394E-05	-2.67394E-05
+				key =	182013	2.18298E-01	-1.19555E-05	-1.19555E-05
+				key =	196506	1.01325E-01	-5.38060E-06	-5.38060E-06
+				key =	211373	4.70309E-02	-2.45258E-06	-2.45258E-06
+				key =	226411	2.18298E-02	-1.13529E-06	-1.13529E-06
+				key =	241485	1.01325E-02	-5.26955E-07	-5.26955E-07
+				key =	256575	4.70309E-03	-2.44591E-07	-2.44591E-07
+				key =	271680	2.18298E-03	-1.13529E-07	-1.13529E-07
+				key =	286915	1.01325E-03	-5.19125E-08	-5.19125E-08
+				key =	302648	4.70309E-04	-2.29857E-08	-2.29857E-08
+				key =	319000	0.00000E+00	0.00000E+00	0.00000E+00
+			}
+			AtmosphereFromGround
+			{
+				waveLength = 0.561538577,0.511538446,0.4423078,0
+				samples = 5
+			}
+		}
 		ScaledVersion
 		{
 			type = Atmospheric
