--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -64,7 +64,7 @@
 		Orbit
 		{
 			referenceBody = PJ2/IlioAB_d
-			color = #ffdede
+			color = #636363
 			semiMajorAxis = 34442100
 			eccentricity = 0.0000001
 			inclination = 0.2
