--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -49,7 +49,7 @@
 		Orbit
 		{
 			referenceBody = PJ2/IlioAB_d
-			color = #6f4f34
+			color = #64803a
 			semiMajorAxis = 110008700
 			eccentricity = 0.08
 			inclination = 3
