--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
@@ -35,6 +35,118 @@
 			meanAnomalyAtEpochD = 50
 			inclination = 0.53
 		}
+		Atmosphere				
+		{				
+			enabled = True			
+			oxygen = False			
+			altitude = 336000			
+			adiabaticIndex = 1.40			
+			atmosphereMolarMass = 0.002057			
+			temperatureSeaLevel = 726			
+			staticPressureASL =	10132.5			
+			temperatureCurve				
+			{				
+				key = 0	726	0.00000E+00	-1.59332E-02
+				key = 7908	600	-1.59332E-02	-1.50433E-02
+				key = 14489	501	-1.50433E-02	-1.48793E-02
+				key = 20000	419	-1.48793E-02	-3.00133E-03
+				key = 43323	349	-3.00133E-03	-2.64254E-03
+				key = 63001	297	-2.64254E-03	-2.30483E-03
+				key = 79922	258	-2.30483E-03	-1.73681E-03
+				key = 94892	232	-1.73681E-03	-1.01530E-03
+				key = 108681	218	-1.01530E-03	-3.01091E-04
+				key = 121966	214	-3.01091E-04	-7.57633E-05
+				key = 135165	213	-7.57633E-05	1.50173E-04
+				key = 148483	215	1.50173E-04	5.12896E-04
+				key = 162131	222	5.12896E-04	5.65691E-04
+				key = 176273	230	5.65691E-04	6.12162E-04
+				key = 190975	239	6.12162E-04	4.59680E-04
+				key = 206203	246	4.59680E-04	2.56049E-04
+				key = 221825	250	2.56049E-04	6.32791E-05
+				key = 237628	251	6.32791E-05	-6.31233E-05
+				key = 253470	250	-6.31233E-05	0.00000E+00
+				key = 269329	250	0.00000E+00	0.00000E+00
+				key = 285206	250	0.00000E+00	2.49579E-04
+				key = 301233	254	2.49579E-04	7.82708E-04
+				key = 317842	267	7.82708E-04	1.37680E-03
+				key = 336000	292	1.37680E-03	0.00000E+00
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	0.000	0.00000E+00	0.00000E+00
+				key =	79922	0.000	0.00000E+00	3.34001E-06
+				key =	94892	0.050	3.34001E-06	1.08782E-05
+				key =	108681	0.200	1.08782E-05	1.69364E-05
+				key =	121966	0.425	1.69364E-05	1.70467E-05
+				key =	135165	0.650	1.70467E-05	1.50173E-05
+				key =	148483	0.850	1.50173E-05	1.09906E-05
+				key =	162131	1.000	1.09906E-05	5.75146E-06
+				key =	336000	2.000	5.75146E-06	0.00000E+00
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	1.7	0	0
+				key =	38	0	-0.086	-0.086
+				key =	90	-6.3	-0.1396	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	9	0	0
+				key =	38	7.73	-0.0645	-0.0645
+				key =	90	3	-0.1047	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	-0.08	0	-0.0043
+				key =	72	-0.26	0	0
+				key =	162	0	0.0045	0.0045
+				key =	252	0.26	0	0
+				key =	342	0	-0.0045	-0.0045
+				key =	360	-0.08	-0.0043	0
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	0.6	0	-1.2
+				key =	1	-0.6	-1.2	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	1.01325E+04	0.00000E+00	-8.96159E-01
+				key =	7908	4.70309E+03	-5.03850E-01	-5.03850E-01
+				key =	14489	2.18298E+03	-2.80123E-01	-2.80123E-01
+				key =	20000	1.01325E+03	-3.44763E-07	-3.07482E-02
+				key =	43323	4.70309E+02	-1.70987E-02	-1.70987E-02
+				key =	63001	2.18298E+02	-9.32937E-03	-9.32937E-03
+				key =	79922	1.01325E+02	-4.99185E-03	-4.99185E-03
+				key =	94892	4.70309E+01	-2.57187E-03	-2.57187E-03
+				key =	108681	2.18298E+01	-1.26938E-03	-1.26938E-03
+				key =	121966	1.01325E+01	-5.97937E-04	-5.97937E-04
+				key =	135165	4.70309E+00	-2.77538E-04	-2.77538E-04
+				key =	148483	2.18298E+00	-1.26769E-04	-1.26769E-04
+				key =	162131	1.01325E+00	-5.70447E-05	-5.70447E-05
+				key =	176273	4.70309E-01	-2.54867E-05	-2.54867E-05
+				key =	190975	2.18298E-01	-1.13953E-05	-1.13953E-05
+				key =	206203	1.01325E-01	-5.12853E-06	-5.12853E-06
+				key =	221825	4.70309E-02	-2.33768E-06	-2.33768E-06
+				key =	237628	2.18298E-02	-1.08210E-06	-1.08210E-06
+				key =	253470	1.01325E-02	-5.02267E-07	-5.02267E-07
+				key =	269329	4.70309E-03	-2.33132E-07	-2.33132E-07
+				key =	285206	2.18298E-03	-1.08210E-07	-1.08210E-07
+				key =	301233	1.01325E-03	-4.93989E-08	-4.93989E-08
+				key =	317842	4.70309E-04	-2.17632E-08	-2.17632E-08
+				key =	336000	0.00000E+00	0.00000E+00	0.00000E+00
+			}
+			AtmosphereFromGround
+			{
+				waveLength = 0.561538577,0.511538446,0.4423078,0
+			}			
+		}
 		ScaledVersion
 		{
 			type = Atmospheric
