--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -18,7 +18,7 @@
 			radius = 60060
 			tidallyLocked = true
 			initialRotation = 200
-			
+			inverseRotThresholdAltitude = 35000
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 0.00076
