Reduce Filesize; Change some cb identifiers
SnailsAttack went through and reduced the filesize for lots of maps by ensuring they were grayscale, or reducing their sizes in situations where that obviously would not matter. This ultimately saves 2.63 MB.
* Change identifiers for Ollo, Kilna, and Alkin systems to match their names. (Plan is to change all names and identifiers to match the object's real names)

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/0-Ollo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/0-Ollo.cfg
@@ -7,7 +7,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Ollo
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Sphere.bin
-		identifier = PJ2/IlioAB_b
+		identifier = PJ2/Ollo
 		Template
 		{
 			name = Jool //placeholder
