--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
@@ -3,6 +3,7 @@
     Body
     {
         name = Olu
+		identifier = PJ2/Olu
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Olu.bin
         Template
         {
@@ -63,7 +64,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Ollo
+            referenceBody = PJ2/Ollo
             color = #879854
             inclination = 0.0002
             eccentricity = 0.01
