--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
@@ -3,6 +3,7 @@
     Body
     {
         name = Fourcroy
+		identifier = PJ2/Fourcroy
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Fourcroy.bin
         Template
         {
@@ -51,7 +52,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Ollo
+            referenceBody = PJ2/Ollo
             color = #434241
             inclination = 0.0001
             eccentricity = 0.004
