--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
@@ -3,6 +3,7 @@
     Body
     {
         name = Conscience
+		identifier = PJ2/Conscience
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Conscience.bin
         Template
         {
@@ -57,7 +58,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Ollo
+            referenceBody = PJ2/Ollo
             color = #6e6d6b
             inclination = 0.002
             eccentricity = 0.03
