--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
@@ -3,6 +3,7 @@
     Body
     {
         name = Fish
+		identifier = PJ2/Fish
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Fish.bin
         Template
         {
@@ -34,7 +35,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Ollo
+            referenceBody = PJ2/Ollo
             color = #685d4c
             inclination = 15
             eccentricity = 0.04
