--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -39,7 +39,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_c
+			referenceBody = PJ2/Kilna
 			color = #5c3128
 			semiMajorAxis = 149671800
 			eccentricity = 0.0365
