--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -68,7 +68,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_c
+			referenceBody = PJ2/Kilna
 			color = #796b58
 			semiMajorAxis = 78008300
 			eccentricity = 0
