--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Alkin
-		identifier = PJ2/IlioAB_d
+		identifier = PJ2/Alkin
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Cache/Alkin.bin
 		Template
 		{
