--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Ilmar
-		identifier = PJ2/IlioAB_d_c_1
+		identifier = PJ2/Ilmar
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Cache/Ilmar.bin
 		Template
 		{
@@ -76,7 +76,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_d_c
+			referenceBody = PJ2/Ulen
 			color = #186fa8
 			semiMajorAxis = 9557600
 			eccentricity = 0.00007
