--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Marith
-		identifier = PJ2/IlioAB_d_a
+		identifier = PJ2/Marith
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Cache/Marith.bin
 		Template
 		{
@@ -63,7 +63,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_d
+			referenceBody = PJ2/Alkin
 			color = #636363
 			semiMajorAxis = 34442100
 			eccentricity = 0.0000001
