--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Radlun
-		identifier = PJ2/IlioAB_d_b
+		identifier = PJ2/Radlun
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Cache/Radlun.bin
 		Template
 		{
@@ -48,7 +48,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_d
+			referenceBody = PJ2/Alkin
 			color = #64803a
 			semiMajorAxis = 110008700
 			eccentricity = 0.08
