--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Ulen
-		identifier = PJ2/IlioAB_d_c
+		identifier = PJ2/Ulen
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Cache/Ulen.bin
 		Template
 		{
@@ -57,7 +57,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_d
+			referenceBody = PJ2/Alkin
 			color = #b37548
 			semiMajorAxis = 329115300
 			eccentricity = 0.0057
