--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -2,8 +2,8 @@
 {
 	Body
 	{
-		name = IlioAB_e
-		identifier = PJ2/IlioAB_e
+		name = Sandevistan-Gerro_Barycenter
+		identifier = PJ2/SandevistanGerroBarycenter
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/Cache/Barry.bin
 
 		Debug
@@ -40,8 +40,8 @@
 		Properties
 		{
 			displayName = Gerro-Sandevistan Barycenter
-            		description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
-            		radius = 4096
+			description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
+			radius = 4096
 			mass = 5.97219e22
 			@mass *= 31.89
 			rotates = true
