--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
@@ -106,7 +106,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_e
+			referenceBody = PJ2/SandevistanGerroBarycenter
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.6,0.8,1,1
