--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
@@ -5,8 +5,8 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = IlioAB_e_1_i
-		identifier = PJ2/IlioAB_e_1_i
+		name = Somna
+		identifier = PJ2/Somna
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/Cache/Somna.bin
 		Template
 		{
