--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = IlioAB_e2
-		identifier = PJ2/IlioAB_e2
+		identifier = PJ2/Sandevistan
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/Cache/Sandevistan.bin
 		Template
 		{
@@ -38,7 +38,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioAB_e
+			referenceBody = PJ2/SandevistanGerroBarycenter
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.825,0.688,0.563,1
