--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
@@ -3,6 +3,7 @@
     Body
     {
         name = Soval
+		identifier = PJ2/Soval
         cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/Cache/Soval.bin
         Template
         {
@@ -33,7 +34,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Ollo
+            referenceBody = PJ2/Ollo
             color = #2a2927
             inclination = 0.0002
             eccentricity = 0.004
